# rec_lint

./: .rec_lint.yaml  .rec_lint_config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  check.md  review.md  rustfmt.toml  task.md  tmp-test-projects.txt  tmp-tests.txt
docs/: README_TEMPLATE.md  rec_lint.schema.md
docs/readme/: .rec_lint.yaml  README_TEMPLATE.md
docs/readme/sample/: .rec_lint_config.yaml
docs/sample/: .rec_lint_config.yaml  rec_lint_config.yaml
docs/sample/src/: .rec_lint.yaml  Authenticator.php  PlanService.php
docs/schema/: rec_lint.schema.md  rec_lint_config.schema.md
docs/schema/rules/: common.md  custom.md  forbidden-patterns.md  forbidden-texts.md  guideline.md  require-english-comment.md  require-japanese-comment.md  require-japanese-kotest-test-name.md  require-japanese-phpunit-test-name.md  require-japanese-rust-test-name.md  require-kotest-test.md  require-kotlin-doc.md  require-php-doc.md  (+4 more)
schema/: rec_lint.schema.json  rec_lint_config.schema.json
schema/parts/: rec_lint.schema.json  rec_lint_config.schema.json
schema/rules/: common.schema.json  custom.schema.json  forbidden-patterns.schema.json  forbidden-texts.schema.json  guideline.schema.json  require-english-comment.schema.json  require-japanese-comment.schema.json  require-japanese-kotest-test-name.schema.json  require-japanese-phpunit-test-name.schema.json  require-japanese-rust-test-name.schema.json  require-kotest-test.schema.json  require-kotlin-doc.schema.json  require-php-doc.schema.json  require-phpunit-test.schema.json  require-rust-doc.schema.json  require-rust-test.schema.json  require-rust-unit-test.schema.json
src/: cli.rs  collector.rs  config.rs  lib.rs  main.rs  rule.rs  validator.rs
src/commands/: add.rs  check.rs  desc.rs  guideline.rs  init.rs  mod.rs  new.rs  review.rs  show.rs  validate.rs  version.rs
src/filter/: exclude_filter.rs  ext_filter.rs  mod.rs
src/matcher/: mod.rs
src/rule/: .rec_lint.yaml  collector.rs  mod.rs  parser.rs  root_config.rs
src/validate/: .rec_lint.yaml  custom.rs  mod.rs  regex.rs  text.rs
test-projects/sort/: .rec_lint.yaml  .rec_lint_config.yaml  a_first.rs  b_second.kt  c_third.java
tests/: .rec_lint.yaml  guideline.rs  rec_lint.yaml  review.rs  show.rs  validate.rs
tests.bk/: .rec_lint.yaml  guideline.rs
tests.bk/common/: mod.rs
tests/check/: list.rs  schema.rs  tree.rs
tests/common/: mod.rs
tests/show/: rec_tree.rs
tools/readme-generator/: Cargo.toml
tools/schema-tools/: Cargo.toml
(+434 files in other folders)
